--- a/templates/web/pormibarrio/static/stats.html
+++ b/templates/web/pormibarrio/static/stats.html
@@ -5,11 +5,11 @@
 	<form method="post" action="stats" enctype="application/x-www-form-urlencoded" accept-charset="utf-8">
 		<div class="stats-form stats-form-first">
 			<label for="start_date">[% loc('Start Date:') %]</label>
-		    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="start_date" id="start_date"
-		      value="[% start_date ? start_date.strftime( '%d/%m/%Y') : '' | html %]" />
+		    <input type="text" placeholder="[% loc('Click here or enter as yyyy-mm-dd') %]" name="start_date" id="stats-start-date"
+		      value="[% start_date ? start_date.strftime( '%Y-%m-%d') : '' | html %]" />
 
 		    <label for="end_date">[% loc('End Date:') %]</label>
-		    <input type="text" placeholder="[% loc('Click here or enter as dd/mm/yyyy') %]" name="end_date" id="end_date" size="5" value="[% end_date ? end_date.strftime( '%d/%m/%Y') : '' | html %]" />
+		    <input type="text" placeholder="[% loc('Click here or enter as yyyy-mm-dd') %]" name="end_date" id="stats-end-date" size="5" value="[% end_date ? end_date.strftime( '%Y-%m-%d') : '' | html %]" />
 		    
 		    <input class="btn-stats" type="submit" name="getcounts"  size="30" id="getcounts" value="Ingresar" />
 		</div>
@@ -34,6 +34,7 @@
 <link rel="stylesheet" href="[% start %][% version('/js/jquery-ui/css/smoothness/jquery-ui-1.10.3.custom.min.css') %]">
 
 <div id="download-data"></div>
+<h3 style="margin-top: 4%; text-align: center;">Visualizando desde [% start_date_solo %] al [% end_date_solo %]</h3>
 <div id="graphs" style="height: 400px">
 	<div class="graph-totals-values" class="chart-group"></div>
 	<div id="graph-totals" style="height: 300px; width: 60%;" class="chart-group"></div>
@@ -304,33 +305,6 @@
 		}
 	}
 [% END %]
-
-$( document ).ready(function() {
-	/*$('.highcharts-series-group').click(function(e){
-		e.preventDefault();
-		alert('CLICK!');
-	});*/
-	//$('.graph-group').hide();
-	//$("#group"+firstgid).show();
-
-	$( "#start_date" ).datepicker({
-      defaultDate: "-1w",
-      changeMonth: true,
-      dateFormat: 'dd/mm/yy' ,
-      // This sets the other fields minDate to our date
-      onClose: function( selectedDate ) {
-        $( "#end_date" ).datepicker( "option", "minDate", selectedDate );
-      }
-    });
-    $( "#end_date" ).datepicker({
-     /// defaultDate: "+1w",
-      changeMonth: true,
-      dateFormat: 'dd/mm/yy' ,
-      onClose: function( selectedDate ) {
-        $( "#start_date" ).datepicker( "option", "maxDate", selectedDate );
-      }
-    });
-});
 </script>
 
 [% INCLUDE footer.html %]
