Bug de nombre en reporte issue 104, cambios por banner en reporte

--- a/templates/web/pormibarrio/report/update.html
+++ b/templates/web/pormibarrio/report/update.html
@@ -1,6 +1,21 @@
 [% IF loop.first %]
 <div class="comment-reports">
 [% END %]
+[% IF update.anonymous %]
+	<div class="comment">
+		<div class="user-avatar">
+			<img alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">
+		</div>
+		<div class="user-info">
+			<h4>An&oacute;nimo</h4>
+			<span class="time-report">[% INCLUDE meta_line %]</span>
+		</div>
+		<div class="user-comment comment">
+			[% add_links( update.text ) | html_para %]
+			[% INCLUDE 'report/photo.html' object=update %]
+		</div>
+	</div>
+[% ELSE %]
      <div class="comment comment-[% update.name %]">
 		<div class="user-avatar">
 			[% IF update.users.picture_url %]	
@@ -21,6 +36,7 @@
 			[% INCLUDE 'report/photo.html' object=update %]
 		</div>
 	</div>
+[% END %]
 [% IF loop.last %]
 </div>
 [% END %]
