Cambios en templates para CR

--- a/templates/web/pormibarriocr/header.html
+++ b/templates/web/pormibarriocr/header.html
@@ -168,15 +168,64 @@
         <div class="top-container">
             <!--BUSCAR CALLES-->
             <div id="s-calles" class="s-calles">
-                <form role="form" class="form-inline">
-                    <div class="form-group pull-left">
-                        <input class="" placeholder="Calle" id="calle" onkeyup="searchLocationAjax(event, this)"/>
-                        <input class="" placeholder="Esquina/numero" id="esquina" onkeyup="searchLocationAjax(event, this)"/>
-                        <input type="hidden" id="main-street-code" />
-                        <input type="hidden" id="second-street-code" />
-                    </div>
-                    <div class="btn btn-search" onclick="streetLocateSubmit()" >Buscar</div>
-                </form>
+                <div class="form-group pull-left">
+                    <select id="streetLocate" class="locate">
+                        <option disabled selected>--BÚSCA UN LUGAR--</option>
+                        <option value="1">BANCOS Y CAJEROS</option>
+                        <option value="2">CENTROS EDUCATIVOS</option>
+                        <option value="3">PLAZAS DE DEPORTES</option>
+                    </select>
+                    <select id="streetLocate-1" class="locate locateDetails">
+                        <option value="1">MUTUAL ALAJUELA</option>
+                        <option value="2">BANCO DE COSTA RICA</option>
+                        <option value="3">BANCO POPULAR</option>
+                        <option value="4">CAJEROS-B.N.</option>
+                        <option value="5">CAJERO-DAVIVIENDA</option>
+                        <option value="6">OFICINA-B.C.R</option>
+                        <option value="7">COOPAVEGRA</option>
+                    </select>
+                    <select id="streetLocate-2" class="locate locateDetails">
+                        <option value="8">UNIVERSvalueAD NACIONAL ESTATAL A DISTANCIA (U.N.E.D)</option>
+                        <option value="9">ESCUELA SANTA MARIA GORETTI</option>
+                        <option value="10">ESCUELA JACINTO AVILA ARAYA</option>
+                        <option value="11">ESCUELA LOS PINOS</option>
+                        <option value="12">CENTRO DE EDUCACION NUTRICIONAL LA GRANJA PALMARES</option>
+                        <option value="13">ESCUELA ERMvalueA BLANCO GONZALEZ</option>
+                        <option value="14">COLEGIO BILINGUE DE PALMARES</option>
+                        <option value="15">UNIVERSvalueAD DE COSTA RICA</option>
+                        <option value="16">ESCUELA MANUEL BERNARDO GOMEZ</option>
+                        <option value="17">CENTRO INFANTIL ELIZA ALVAREZ VARGAS</option>
+                        <option value="18">KINDER DE PALMARES</option>
+                        <option value="19">ESCUELA DANIEL SOLORZANO MURILLO</option>
+                        <option value="20">COLEGIO DR. RICARDO MORENO CAÑAS</option>
+                        <option value="21">ESCUELA PABLO ALVARADO VARGAS</option>
+                        <option value="22">ESCUELA DR. RICARDO MORENO CAÑAS</option>
+                        <option value="23">COLEGIO SAN AGUSTIN</option>
+                        <option value="24">ESCUELA PRESBITERO VENANCIO DE OÑA Y MARTINEZ</option>
+                        <option value="25">ESCUELA JULIA FERNANDEZ RODRIGUEZ</option>
+                        <option value="26">ESCUELA JOAQUIN L. SANCHO QUESADA</option>
+                        <option value="27">ESCUELA LA UNION</option>
+                        <option value="28">COLEGIO NOCTURNO DE PALMARES</option>
+                        <option value="29">C.T.P. SANTOCRISTO DE ESQUIPULAS</option>
+                        <option value="30">CENTRO INFANTIL BILINGUE ANGELS</option>
+                    </select>
+                    <select id="streetLocate-3" class="locate locateDetails">
+                        <option value="31">PLAZA DEPORTES COLEGIO PALMARES</option>
+                        <option value="32">PLAZA DEPORTES LA COCALECA</option>
+                        <option value="33">PLAZA DEPORTES ZARAGOZA</option>
+                        <option value="34">PLAZA DEPORTES DE RINCON</option>
+                        <option value="35">PLAZA DEPORTES CALLE VARGAS</option>
+                        <option value="36">PLAZA DEPORTES CALLE JIMENEZ</option>
+                        <option value="37">PLAZA DEPORTES LA RECTA</option>
+                        <option value="38">PLAZA DEPORTES BUENOS AIRES</option>
+                        <option value="39">PLAZA DEPORTES SANTIAGO</option>
+                        <option value="40">PLAZA DEPORTES CANDELARIA</option>
+                        <option value="41">PLAZA DEPORTES LOS PINOS</option>
+                        <option value="42">PLAZA DEPORTES ESQUIPULAS</option>
+                        <option value="43">PLAZA DEPORTES LA GRANJA</option>
+                        <option value="44">ESTADIO FUTBOL PALMARES</option>
+                    </select>
+                </div>
             </div>
             
             <!--lista CALLES-->
