--- a/templates/web/pormibarriocr/report/update-form.html
+++ b/templates/web/pormibarriocr/report/update-form.html
@@ -41,16 +41,26 @@
 			</div>
 
 			[% IF c.user && c.user.belongs_to_body( problem.bodies_str ) %]
+			<div class="form-group">
 				<label for="form_state">[% loc( 'State' ) %]</label>
 				<select name="state" id="form_state">
 					[% FOREACH state IN [ ['confirmed', loc('Open')], ['investigating',
 					loc('Investigating')], ['action scheduled', loc('Action Scheduled')],
 					['in progress', loc('In Progress')], ['duplicate', loc('Duplicate')],
 					['unable to fix', loc('Unable to fix')], ['not responsible', loc('Not Responsible')],
-					['fixed', loc('Fixed')] ] %]
+					['fixed', loc('Fixed')], ['hidden', loc('Hidden')] ] %]
 					<option [% 'selected ' IF state.0 == problem.state %] value="[% state.0 %]">[% state.1 %]</option>
 					[% END %]
 				</select>
+			</div>
+			<div class="form-group">
+				<label for="form_category">[% loc( 'Assign category' ) %]</label>
+				<select name="new_category" id="form_category">
+					[% FOREACH cat IN categories %]
+					<option [% 'selected ' IF cat == problem.category %] value="[% cat %]">[% cat %]</option>
+					[% END %]
+				</select>
+			</div>	
 			[% ELSE %]
 				[% IF problem.is_fixed AND c.user_exists AND c.user.id == problem.user_id %]
 					<div class="checkbox">
