--- a/web/cobrands/pormibarriocr/main.css
+++ b/web/cobrands/pormibarriocr/main.css
@@ -18,12 +18,20 @@ body{
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	background:url(images/bg/pmb-mapa-sp.png) no-repeat center top;
+	background:url(images/bg/pmb-mapa-sp-cr.png) no-repeat center top;
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 body.fullwidthpage{
 	width: 100%;
-	background: url(images/bg/pmb-mapa-sp.png) no-repeat scroll center top / cover rgba(0, 0, 0, 0);
+	background: url(images/bg/pmb-mapa-sp-cr.png) no-repeat scroll center top / cover rgba(0, 0, 0, 0);
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 a, button, div.it-r {
